[gd_scene load_steps=4 format=3 uid="uid://c8cjskufdru2i"]

[ext_resource type="Script" uid="uid://b4rnj3xgifmuj" path="res://scenes/ui/runes/runes_menu.gd" id="1_fj8ui"]
[ext_resource type="Texture2D" uid="uid://wahnh8hhg3td" path="res://assets/gui/panel.png" id="2_urlrl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h41ld"]
texture = ExtResource("2_urlrl")

[node name="RunesMenu" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fj8ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = -528.5
offset_top = -283.0
offset_right = 592.5
offset_bottom = 347.0
theme_override_styles/panel = SubResource("StyleBoxTexture_h41ld")

[node name="ChoicesContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Close"

[node name="RerollButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Reroll (1)"

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/RerollButton" to="." method="_on_reroll_button_pressed"]
